[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/settings_menu/SettingsMenu.gd" type="Script" id=1]

[node name="SettingsMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 412.0
margin_top = 186.0
margin_right = 612.0
margin_bottom = 414.0
rect_min_size = Vector2( 200, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 221.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 14.0
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 22.0

[node name="Sound" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 186.0
margin_bottom = 40.0
text = "Sound"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVolume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 186.0
margin_bottom = 60.0

[node name="MainVolume" type="Label" parent="PanelContainer/VBoxContainer/MainVolume"]
margin_top = 1.0
margin_right = 82.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Main"

[node name="Main" type="HSlider" parent="PanelContainer/VBoxContainer/MainVolume"]
margin_left = 86.0
margin_right = 186.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05

[node name="MusicVolume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 186.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MusicVolume"]
margin_top = 1.0
margin_right = 82.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Music"

[node name="Music" type="HSlider" parent="PanelContainer/VBoxContainer/MusicVolume"]
margin_left = 86.0
margin_right = 186.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05

[node name="SoundVolume" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 186.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/SoundVolume"]
margin_top = 1.0
margin_right = 82.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Effects"

[node name="Sound" type="HSlider" parent="PanelContainer/VBoxContainer/SoundVolume"]
margin_left = 86.0
margin_right = 186.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 186.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameplay" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 186.0
margin_bottom = 126.0
text = "Gameplay"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screenshake" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 186.0
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Screenshake"]
margin_top = 1.0
margin_right = 82.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Screenshake"

[node name="Screenshake" type="HSlider" parent="PanelContainer/VBoxContainer/Screenshake"]
margin_left = 86.0
margin_right = 186.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05

[node name="Particles" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 186.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Particles"]
margin_top = 13.0
margin_right = 82.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Particles"

[node name="Particles" type="CheckButton" parent="PanelContainer/VBoxContainer/Particles"]
margin_left = 86.0
margin_right = 186.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 186.0
margin_bottom = 214.0
text = "Close"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/MainVolume/Main" to="." method="_on_Main_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/MusicVolume/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/SoundVolume/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Screenshake/Screenshake" to="." method="_on_Screenshake_value_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Particles/Particles" to="." method="_on_Particles_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Close" to="." method="_on_Close_pressed"]
